target/debug/build/crossbeam-utils-78e1e96eb239279a/stderr
error[E0412]: cannot find type `AtomicU128` in module `core::sync::atomic`
 --> <anon>:1:38
  |
1 |   pub type Probe = core::sync::atomic::AtomicU128;
  |                                        ^^^^^^^^^^ help: a struct with a similar name exists: `AtomicU16`
 --> /rustc/6b00bc3880198600130e1cf62b8f8a93494488cc/library/core/src/sync/atomic.rs:3592:1
 ::: /rustc/6b00bc3880198600130e1cf62b8f8a93494488cc/library/core/src/sync/atomic.rs:3609:1
  |
  = note: similarly named struct `AtomicU16` defined here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
